--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200;400;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="지연 님의 추억사진"/>
-    <meta property="og:description" content="내가 만든 첫번째 웹페이지!"/>
+    <meta property="og:title" content="2022 첫 벚꽃놀이"/>
+    <meta property="og:description" content="어딘지 궁금하다면 클릭 !"/>
     <meta property="og:image" content="image.jpg"/> 
 
     <style>
